# FRANKASSET

./: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
config/: __init__.py  app.yaml  models.yaml
logger/: __init__.py  custom_logger.py
notebooks/: test_credentials.ipynb
notebooks/my_first_agent/: .gitignore
src/: __init__.py
src/agents/: __init__.py  brand_classifier_agent.py  validation_agent.py
src/api/: routes.py  schemas.py
src/database/: db_manager.py  models.py
src/prompts/: __init__.py  brand_classifier_classify.md  brand_classifier_system.md  validation_system.md
src/vector_store/: __init__.py  faiss_manager.py
test/: __init__.py  test_agents.py  test_api.py  test_database.py  test_vector_store.py
utils/: __init__.py  config.py  helpers.py
